      ``Branch.rename_one`` and ``Branch.move`` were removed. (Jelmer Vernooij)

  TESTING:

    * ``addCleanup`` now takes ``*arguments`` and ``**keyword_arguments``
      which are then passed to the cleanup callable as it is run. In
      addition, addCleanup no longer requires that the callables passed to
      it be unique. (Jonathan Lange)

  INTERNALS:

    * A new plugin interface, ``bzrlib.log.log_adapters``, has been added.
      This allows dynamic log output filtering by plugins.
      (Robert Collins)

    * ``bzrlib.btree_index`` is now available, providing a b-tree index
      layer. The design is memory conservative (limited memory cache),
      faster to seek (approx 100 nodes per page, gives 100-way fan out),
      and stores compressed pages allowing more keys per page.
      (Robert Collins, John Arbash Meinel)

    * ``bzrlib.diff.DiffTree.show_diff`` now skips changes where the kind
      is unknown in both source and target.
      (Robert Collins, Aaron Bentley)

    * Mail clients for `bzr send` are now listed in a registry.  This
      allows plugins to add new clients by registering them with
      ``bzrlib.mail_client.mail_client_registry``.  All of the built-in
      clients now use this mechanism.  (Neil Martinsen-Burrell)


bzr 1.6 2008-08-25
------------------

Finally, the long awaited bzr 1.6 has been released. This release includes
new features like Stacked Branches, improved weave merge, and an updated
server protocol (now on v3) which will allow for better cross version
compatibility. With this release we have deprecated Knit format
repositories, and recommend that users upgrade them, we will continue to
support reading and writing them for the forseeable future, but we will
not be tuning them for performance as pack repositories have proven to be
better at scaling. This will also be the first release to bundle
TortoiseBzr in the standalone Windows installer.


bzr 1.6rc5 2008-08-19
---------------------

  BUG FIXES: 
